--- a/package.json
+++ b/package.json
@@ -1,39 +1,53 @@
 {
-  "name": "machine-test-app",
+  "name": "lrpjroljdly.angular",
   "version": "0.0.0",
+  "private": true,
+  "dependencies": {
+    "rxjs": "6.3.3",
+    "moment": "2.22.2",
+    "core-js": "2.5.7",
+    "zone.js": "0.8.26",
+    "hammerjs": "2.0.8",
+    "@angular/cdk": "6.4.7",
+    "@angular/core": "6.1.9",
+    "@angular/http": "6.1.9",
+    "@angular/forms": "6.1.9",
+    "@angular/common": "6.1.9",
+    "@angular/router": "6.1.9",
+    "@angular/compiler": "6.1.9",
+    "@angular/material": "6.4.7",
+    "web-animations-js": "2.3.1",
+    "@angular/animations": "6.1.9",
+    "@angular/platform-browser": "6.1.9",
+    "angular-in-memory-web-api": "0.5.4",
+    "@angular/material-moment-adapter": "6.4.7",
+    "@angular/platform-browser-dynamic": "6.1.9"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~12.1.0",
-    "@angular/common": "~12.1.0",
-    "@angular/compiler": "~12.1.0",
-    "@angular/core": "~12.1.0",
-    "@angular/forms": "~12.1.0",
-    "@angular/platform-browser": "~12.1.0",
-    "@angular/platform-browser-dynamic": "~12.1.0",
-    "@angular/router": "~12.1.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.4",
-    "@angular/cli": "~12.1.4",
-    "@angular/compiler-cli": "~12.1.0",
-    "@types/jasmine": "~3.8.0",
+    "@angular-devkit/build-angular": "~0.1100.4",
+    "@angular/cli": "~11.0.4",
+    "@angular/compiler-cli": "~11.0.4",
+    "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.2"
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.2"
   }
 }
